The DLT client can send control messages to the daemon, e.g. to set individual log levels of applications and contexts or get the list of applications and contexts registered in the DLT daemon.


License
-------
see file: License.txt

Contact
-------
Alexander Wenzel
BMW Group
Alexander.AW.Wenzel@bmw.de


Changes in this release
-----------------------
2.4.1 

Improvements
    * Added manual pages.
    * Added new API dlt_check_library_version() function.
    * DLT user library does not set the stack size of the receiver thread anymore.

Bugfixes
    * Fixes syslog adapter in dlt-system
    * Reverted API changes in dlt_register_app() function.

2.4.0

Improvements
    * New config files /etc/dlt.conf and /etc/dlt-system.conf must be adapted to the needs
    * New DLT user lib API dlt_get_log_state() to get DLT client state
    * New DLT user lib API to manage flow control (needed for bulk data logging)
    * New DLT user lib API dlt_set_log_mode() to enable/disable internal/external trace
    * New application dlt-system (filtransfer, proc file system logger,syslog udp adapter included)
    * [GSW-66] File transfer over DLT.
    * [GSW-43] Performance improvement for bulk data over DLT.
    * [GSW-61] Replace command line parameter by configuration file
    * [GSW-13] Support for keep-alive messages as configuration parameter
    * [GSW-60] Extended offline DLT Trace memory handling.
    * Removed filter implementation 
     
Bugfixes
    *
	
2.3.0

Improvements
    * [GSW-16] Systemd configuration for syslog to DLT dapater
    * [GSW-62] DLT Library version check
    * [GSW-28] Directory where persistent data is stored is not configurable  
    * [GSW-59] Statically allocated large array 
    * Added init script for Ubuntu
    * Optional adding of gprof compile flags

Bugfixes
    * sprintf with float64 fails on ARM platform; disabled this function on QRM platform.

2.2.0:

Improvements

    * Moved build process completely to cmake